--- a/express/views/amCharts.html
+++ b/express/views/amCharts.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>amCharts</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
 <body>
@@ -17,19 +16,9 @@
     <script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
     <script src="https://cdn.amcharts.com/lib/5/geodata/hongKongHigh.js"></script>
 
-    <div id="chartdiv_plant" style="width:50vw; height:50vh"></div>
+    <div id="chartdiv_plant" style="width:50vw; height:80vh"></div>
 
-    <script src="plant.js"></script>
+    <script src="js/plant.js"></script>
 </body>
 
 </html>
-<!-- <html>
-  <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
-</html> -->
