--- a/express/views/index.ejs
+++ b/express/views/index.ejs
@@ -1,35 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>amCharts</title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-
-<body>
-    <script src="https://cdn.amcharts.com/lib/5/index.js"></script>
-    <script src="https://cdn.amcharts.com/lib/5/map.js"></script>
-    <script src="https://cdn.amcharts.com/lib/5/percent.js"></script>
-    <script src="https://cdn.amcharts.com/lib/5/themes/Animated.js"></script>
-    <script src="https://cdn.amcharts.com/lib/5/geodata/worldLow.js"></script>
-    <script src="https://cdn.amcharts.com/lib/5/geodata/hongKongHigh.js"></script>
-
-    <div id="chartdiv_plant" style="width:50vw; height:50vh"></div>
-
-    <script src="plant.js"></script>
-</body>
-
-</html>
-<!-- <html>
+<html>
   <head>
-    <title><%= title %></title>
+    <title>DSE Statistics</title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>DSE Statistics</h1>
+    <p><a href="amChart.html">DSE (3322) Passing Rate (amChart)</a></p>
+    <p><a href="d3Chart.html">DSE Grade Distribution Per Subject (d3Chart)</a></p>
   </body>
-</html> -->
+</html>
