--- a/express/public/stylesheets/style.css
+++ b/express/public/stylesheets/style.css
@@ -6,3 +6,35 @@ body {
 a {
   color: #00B7FF;
 }
+
+#chart-parent{
+  width:500px;
+  height:500px;
+}
+#change-chart rect {
+  fill: #4aaeea;
+}
+
+#change-chart text {
+  fill: white;
+  font: 10px sans-serif;
+  text-anchor: end;
+}
+
+/* For d3.js chart */
+.axis text {
+  font: 10px sans-serif;
+}
+
+.axis path,
+.axis line {
+  fill: none;
+  stroke: #fff;
+  shape-rendering: crispEdges;
+}
+
+body {
+  background: #1a1a1a;
+  color: #eaeaea;
+  padding: 10px;
+}
